# tonic-rpc

./: Cargo.toml  flake.nix  shell.nix
example/: Cargo.toml
tonic-rpc/: Cargo.toml
tonic-rpc-macro/: Cargo.toml
tonic-rpc-macro/src/: lib.rs
tonic-rpc/src/: codec.rs
