[package]
name = "tonic-rpc-macro"
version = "0.2.1"
authors = ["Adam Bratschi-Kaye <ark.email@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adamrk/tonic-rpc"
homepage = "https://github.com/adamrk/tonic-rpc"
description = """
Core macro for tonic-rpc.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
itertools = "0.14.0"
syn = { version = "2.0.101", features = ["full"] }
tonic-build = { workspace = true }
proc-macro2 = "1.0.51"
quote = "1.0.23"
